tests/typing/should_fail/overload_return_type.java
package tutu.titi.toto;

class A {
	public int method1(int i, float b) {
		return 1;
	}

	public float method1(int i, float c) {
		return 1.1;
	}
}
